test/src/e2e_vm_tests/test_programs/should_fail/trait_pure_calls_impure/src/main.sw
contract;

trait A {
    #[storage(read)]
    fn f(self) -> bool;
} {
    fn g(self) -> bool {
        self.f()
    }
}
